--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,12 @@
 {
     "name": "noe/e-manga",
     "require": {
-        "doctrine/lexer": "^1.2",
         "twig/twig": "^3.4",
         "nyholm/psr7-server": "^1.0",
         "nikic/fast-route": "^1.3",
-        "nyholm/psr7": "^1.5"
+        "nyholm/psr7": "^1.5",
+        "doctrine/orm": "^2.13",
+        "symfony/cache": "^6.1"
     },
     "autoload": {
         "psr-4": {
