--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
         "twig/twig": "^3.4",
         "nyholm/psr7-server": "^1.0",
         "nikic/fast-route": "^1.3",
-        "nyholm/psr7": "^1.5"
+        "nyholm/psr7": "^1.5",
+        "doctrine/orm": "^2.13"
     },
     "autoload": {
         "psr-4": {
