--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
     "devDependencies": {
         "@prettier/plugin-php": "^0.19.2",
         "husky": "^8.0.2",
-        "prettier": "^2.8.0"
+        "prettier": "^2.8.1",
+        "tailwindcss": "^3.2.4"
     },
     "scripts": {
         "prepare": "husky install",
